--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@ img{
 }
 .username{
     position: absolute;
-    bottom: 50%;
-    left:60%;
+    right:10%;
+    bottom:50%;
     color:white;
     font-size:50px;
     opacity:0.7;
