--- a/style.css
+++ b/style.css
@@ -1,24 +1,83 @@
-.column {
-  margin: 3px;
-  background-color: red;
-  width: 100px;
-  height: 100px;
-  display: inline-block;
-  border: 5px solid black;
+html {
+  background-color: lightgray;
 }
 
-.hero-image {
-  width: 100px;
+body {
+  margin-left: 150px;
+  margin-right: 150px;
+  margin-top: 0;
 }
 
-#blue {
-  background-color: blue;
+
+.heroine-title {
+  padding: 10px;
 }
 
-#green {
-  background-color: green;
+.heroine-title > h1 {
+  padding: 10px;
+  margin: 0;
+  font-size: 42px;
+}
+
+.heroine-image {
+  background-image: url("fiola MulliqiSMALL.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 450px;
+}
+
+.heroine-title > h1 {
+  text-align: left;
+  padding: 25px;
+  color: whitesmoke;
 }
 
 .container {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.scroll {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 24px;
+  background-color: darkgray;
+  border-style: solid;
+  border-color: #101010;
+  border-width: 0 0 4px 0;
+}
+
+.box {
+  height: 50px;
+  width: 50px;
+  background-color: red;
+}
+
+.box + .blue {
+  height: 50px;
+  width: 50px;
+  background-color: blue;
+}
+
+.grid-container {
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-template-columns: minmax(min-content) minmax(100px, 1fr) 10px;
+}
+
+.content {
   padding: 10px;
+  text-align: center;
+}
+
+.grid-column {
+  grid-row: 1;
+  background-color: #f5f5f5;
+  min-width: 0
+}
+
+.grid-column > h1 {
+  padding: 10px;
+  text-align: center;
 }
