--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 .heroine-image {
-  background-image: url("fiola MulliqiSMALL.jpg");
+  background-image: url("fiola.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
